--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # New York Times API Key
 # Get your API key from: https://developer.nytimes.com/get-started
-VITE_NYT_API_KEY=your_api_key_here
+VITE_NYT_API_KEY="8o4A8yROWNlBDdA5xudbwcQdeUIIGhM8"
